# immunum

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  BENCHMARKS.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  benchmark.py  build.rs  immunum.pyi  mkdocs.yml  package-lock.json  package.json  plan.md  pyproject.toml  test-wasm-node.js  test_output.txt  vitest.config.js
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: -bug--bug-report.md  -feature--feature-request.md  -question--how-to---.md  bug_report.md
.github/workflows/: bencher.yml  ci.yml  r-check.yml  release.yml
benches/: bench_comparison.py  bench_scaling.R  performance_benchmarks.rs  speed_benchmark.rs
docs/: demo.md  index.md
docs/api/: annotator.md  immunum.md  index.md  polars.md
docs/assets/: benchmark_plot1_performance.html  benchmark_plot2_correctness.html  benchmark_plot3_scaling.html  immunum-webtool.js
docs/benchmarks/: index.md
docs/stylesheets/: extra.css
docs/usage/: index.md  polars.md  python.md
examples/: python.py
fixtures/: SRR_HKL_10k.fasta  abpdseq_agreed.fasta  ig.fasta  ig.tsv  igh.fasta  test.fasta
fixtures/validation/: ab_H_imgt.csv  ab_H_kabat.csv  ab_K_imgt.csv  ab_K_kabat.csv  ab_L_imgt.csv  ab_L_kabat.csv  tcr_A_imgt.csv  tcr_B_imgt.csv  tcr_D_imgt.csv  tcr_G_imgt.csv
immunum/: Cargo.toml  __init__.py  _internal.pyi  polars.py  typing.py
immunum-macros/: Cargo.toml
immunum-macros/src/: lib.rs
immunum/benches/: benchmark.rs
immunum/fixtures/: rust_output.txt  test.fastq
immunum/resources/consensus/: IMGT_CONSENSUS_H.npy  IMGT_CONSENSUS_K.npy  IMGT_CONSENSUS_L.npy  KABAT_CONSENSUS_H.npy  KABAT_CONSENSUS_K.npy  KABAT_CONSENSUS_K.txt  KABAT_CONSENSUS_L.npy
immunum/src/: annotation.rs  consensus_scoring.rs  constants.rs  fastx.rs  insertion_numbering.rs  lib.rs  main.rs  needleman_wunsch.rs  numbering.rs  numbering_scheme_methods.rs  numbering_scheme_type.rs  prefiltering.rs  python_bindings.rs  schemes.rs  sequence_stream.rs  types.rs  wasm_bindings.rs
immunum/src/consensus/: IMGT_CONSENSUS_K.npy  IMGT_LAMBDA_CONSENSUS.npy
immunum_rs/: __init__.py  _internal.pyi
r-immunum/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  bootstrap.R
r-immunum/R/: extendr-wrappers.R  immunum.R  polars-utils.R  polars.R  validation.R  zzz.R
r-immunum/bench/: bench-annotate.R
r-immunum/man/: Annotator.Rd  benchmark_threshold.Rd  immunum-package.Rd  immunum_version.Rd  polars_number.Rd  polars_numbering_method.Rd  polars_segment.Rd  polars_segmentation_method.Rd  validation_fixtures.Rd
r-immunum/src/: Makevars  Makevars.win  entrypoint.c
r-immunum/src/extendr/: Cargo.toml  cargo-overrides.toml
r-immunum/src/extendr/src/: lib.rs
r-immunum/tests/: testthat.R
r-immunum/tests/testthat/: helper-fixtures.R  test-annotator.R  test-batch.R  test-cross-language.R  test-normalize.R  test-polars.R  test-validation.R  test-version.R
r-immunum/tools/: sync-benchmarks.R  validate-static.R
r-immunum/vignettes/: batch-processing.Rmd  getting-started.Rmd
resources/benchmark_results/: results_ab_H_imgt.csv  results_ab_H_kabat.csv  results_ab_K_imgt.csv  results_ab_K_kabat.csv  results_ab_L_imgt.csv  results_ab_L_kabat.csv  results_speed.csv  results_tcr_A_imgt.csv  results_tcr_B_imgt.csv  results_tcr_D_imgt.csv  results_tcr_G_imgt.csv
resources/consensus/: IGH.csv  IGL.csv  KABAT_CONSENSUS_H.txt  KABAT_CONSENSUS_L.txt  README.md  TRA.csv  TRB.csv  TRG.csv  ab_imgt_H_consensus.tsv  ab_imgt_K_consensus.tsv  ab_imgt_L_consensus.tsv  tcr_imgt_A_consensus.tsv  tcr_imgt_B_consensus.tsv  tcr_imgt_D_consensus.tsv  tcr_imgt_G_consensus.tsv
resources/consensus/pdb/: IGH.csv  IGH.tsv  IGK.csv  IGK.tsv  IGL.csv  IGL.tsv  TRA.csv  TRA.tsv  TRB.csv  TRB.tsv  TRD.csv  TRD.tsv  TRG.csv  TRG.tsv
resources/consensus/repseqio/: IGH.csv  IGH.tsv  IGK.csv  IGK.tsv  IGL.csv  IGL.tsv  TRA.csv  TRA.tsv  TRB.csv  TRB.tsv  TRD.csv  TRD.tsv  TRG.csv  TRG.tsv
scripts/: README.md  generate_consensus.py  generate_vj_combinations.py  plots.py  utils.py
src/: alignment.rs  annotation.rs  annotator.rs  buffer_pool.rs  cli.rs  consensus.rs  consensus_scoring.rs  constants.rs  error.rs  fastx.rs  gap_penalty.rs  insertion_numbering.rs  io.rs  kmer_prefiltering.rs  lib.rs  main.rs  needleman_wunsch.rs  numbering.rs  numbering_scheme.rs  numbering_scheme_type.rs  polars.rs  prefiltering.rs  python.rs  python_bindings.rs  result.rs  schemes.rs  scoring.rs  scoring_matrix.rs  sequence.rs  sequence_stream.rs  types.rs  validation.rs  wasm.rs  wasm_bindings.rs
src/numbering/: imgt.rs  kabat.rs  mod.rs
tests/: abpdseq_validation_test.rs  bench_comparison.py  bench_polars.py  cli.rs  cli_tests.rs  test_annotator.py  test_number_sequence.py  test_polars.py  test_python.py  test_wasm.mjs
tests/python/: test_number_sequence.py
tests/wasm/: annotator.test.js  api.test.js  scoring-params.test.js
