[package]
name = "immunum"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
chrono = "0.4"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4.5.60", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "immunum"
path = "src/lib.rs"

[[bin]]
name = "immunum"
path = "src/main.rs"

[[bin]]
name = "debug-validation"
path = "src/bin/debug_validation.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "speed-benchmark"
path = "src/bin/speed_benchmark.rs"
