[build-system]
requires = ["maturin>=1.10.2,<2.0", "polars>1.30.0"]
build-backend = "maturin"

[project]
name = "immunum"
version = "1.0.0"
description = "Flexible and fast antibody sequence annotation in Rust with python bindings"
readme = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
module-name = "immunum._internal"
features = ["python", "polars"]
profile = "dist-release"


[dependency-groups]
polars = ["polars>1.30.0"]
dev = [
    "coverage>=7.10.6",
    "go-task-bin>=3.44.1",
    "hypothesis>=6.151.9",
    "pandas-stubs>=2.3.3.251219",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pyrefly>=0.53.0",
    "pysentry-rs>=0.3.10",
    "pytest-benchmark>=5.2.3",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "rtoml>=0.13.0",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
benchmark = [
    "immunum[polars]",
    "anarcii>=2.0.5",
    "antpack~=0.2.7",
    "biopython>=1.86",
    "riot-na>=1.2.2",
    "scikit-bio==0.6.2",
    "typer>=0.24.1",
]
plots = [
    "altair>=6.0.0",
    "matplotlib>=3.10.8",
    "pyarrow>=23.0.1",
    "setuptools>=82.0.1",
    "vl-convert-python>=1.9.0.post1",
]


[tool.uv]
default-groups = ["dev"]
cache-keys = [{ file = "./Cargo.toml" }, { file = "./**/*.rs" }]

[tool.uv.workspace]
members = ["."]

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
    "scripts/*",
    "tests/*.py",
]

[tool.uv.sources]
immunum-rs = { workspace = true }


[tool.pytest.ini_options]
markers = ["slow: mark test as slow (requires full validation fixtures)"]

[tool.coverage.report]
exclude_also = [
    'no cover: start(?s:.)*?no cover: stop',
    "def __repr__",
    "@abstract",
]
fail_under = 90

[tool.coverage.run]
omit = ["/tmp/*"]
include = ["src/**", "tests/**"]

[tool.pysentry.sources]
enabled = ["pypa", "pypi", "osv"]

[tool.pysentry.defaults]
fail_on = "high"

[tool.ty.src]
include = ["src"]
exclude = ["tests"]
