[package]
name = "immunum"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
flate2 = { workspace = true }
pyo3 = { workspace = true, optional = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }
immunum-macros = { path = "../immunum-macros" }
wasm-bindgen-test = "0.3.50"
phf = {version = "0.12.1" , features = ["macros"]}
log = "0.4.27"
csv = "1.3.1"
bincode = "2.0.1"
ndarray = "0.16.0"
ndarray-npy = "0.9.1"

[lib]
name = "immunum"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "immunum-cli"
path = "src/main.rs"

[features]
default = ["python", "wasm"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "wee_alloc"]
